services/hello-graylog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-graylog
  name: hello-graylog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-graylog
  template:
    metadata:
      labels:
        app: hello-graylog
    spec:
      containers:
      - image: politeauthority/hello-graylog:0.0.2
        name: hello-graylog
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        resources:
          limits:
            cpu: 200m
            # memory: 100mb
          requests:
            cpu: 100m
            # memory: 20mb
