services/hello-graylog/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-graylog
  name: hello-graylog
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hello-graylog
  type: ClusterIP
