services/hello-graylog/hello-graylog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-graylog
  name: hello-graylog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-graylog
  template:
    metadata:
      labels:
        app: hello-graylog
    spec:
      containers:
      - image: politeauthority/hello-graylog:0.0.2
        name: hello-graylog
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-graylog
  name: hello-graylog
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hello-graylog
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-graylog
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx-public
  rules:
  - host: hello-graylog.alix.lol
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-graylog
            port:
              name: http
  tls:
  - hosts:
    - hello-graylog.alix.lol
    secretName: hello-graylog-alix-lol-tls
